Fix grid-testimonials on mobile versions

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: var(--darkgray);
-    font-size: 1.4vw;
+    font-size: 1.2vw;
     font-weight: 500;
     transition: 0.15s ease-in-out;
 }
@@ -117,7 +117,7 @@ nav ul li a:hover {
     color: var(--darkgray);
     text-decoration: none;
     right: 0;
-    top: 28%;
+    top: 25%;
     font-size: 1vw;
     transition: 0.5s;
 }
